--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components{
+  .sidebar-menu {
+    @apply border-2 rounded-md border-gray-200 m-2 px-4 py-4 mb-6;
+  }
+  .sidebar-menu-item{
+    @apply text-gray-200 text-2xl font-bold cursor-pointer my-4 border-b-2 gap-2 border-gray-200 grid grid-cols-4;
+  }
+
+  .sidebar-menu-item-icon{
+    @apply grid col-span-1 text-sm relative top-2
+  }
+
+  .sidebar-menu-item-text {
+    @apply grid col-span-3
+  }
+
+  .sidebar-title {
+    @apply my-6 mx-2 text-4xl font-bold text-gray-50 capitalize
+  }
+
+  .article-header {
+    @apply container my-4 mx-2 pb-4 shadow-lg rounded-md bg-gray-700 overflow-hidden;
+  }
+
+  .author-image {
+    @apply  w-10 shadow-xl text-2xl mx-2 h-10 rounded-full font-bold bg-gray-900 text-gray-50 grid justify-center items-center
+  }
 }
