--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components{
   .sidebar-menu {
-    @apply border-2 rounded-md border-gray-200 m-2 px-4 py-4 mb-6;
+    @apply rounded-md m-2 px-4 py-4 mb-6;
   }
   .sidebar-menu-item{
     @apply text-gray-200 text-2xl font-bold cursor-pointer my-4 border-b-2 gap-2 border-gray-200 grid grid-cols-4;
